2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed problem in TargetGenerator occurring when modtime-check is
	disabled, but targets aren't pre-built (URI problem when trying to
	load module resources from file system).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed submit action bug (ignore unknown actions for next page selected
	by pageflow mechanism).

2009-04-17  Martin Leidig  <mleidig@schlund.de>

	Made deref-service configuration element optional and set mustsign to
	true by default.

	Fixed NPE occurring when edit mode is disabled and no TestRecording
	bean is registered/configured.

2009-04-16  Martin Leidig  <mleidig@schlund.de>

	Fixed editmode configuration. Now the editor/enabled setting is used
	to decide if the editor can be called (and, e.g. the result DOM can be
	viewed). If the console/tooling extensions are rendered into the sites
	is still decided by the make mode retrieved from the
	BuildTimeProperties. In future versions we should support that the
	editor and other tooling extensions, like the DOM tree view, can be
	enabled/disabled independently and we shouldn't rely on the mode
	property to set prohibitEdit.

2009-04-15  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed static dereferer key. A random key is generated on startup instead
	and a fake session id is used to ensure that the new request goes to the
	same node of a cluster.

2009-04-15  Martin Leidig  <mleidig@schlund.de>

	Removed support for pustefix.xml configuration file. Now global
	properties are set in the properties section of the project.xml file.
	Existing properties from pustefix.xml were moved to project.xml (made
	most of them to regular elements in the appropriate sections).
	Refactored some classes to inject configuration as bean property value
	instead of Properties value. Removed deprecated properties.

2009-04-14  Andreas Kurth  <andreas.kurth@1und1.de>

	Added statusmessages merge support. Core will create its status codes constants